# CheckIt-AI

./: .env.example  .gitignore  LICENSE.txt  README.md  TESTING_GUIDE.md  demo_questions.json  pyproject.toml  requirements.txt
data/raw/: README.md  impl-tasks-with-priority-and-dependencies.json  impl-tasks-with-prompts.json
docs/: AH_02_CORE_SCHEMAS_SUMMARY.md  AH_03_04_CONFIG_CACHING_GOOGLE_SEARCH.md  AH_05_ROUTER_NODE_SUMMARY.md  AH_06_RESEARCHER_NODE_SUMMARY.md  AH_07_FACT_ANALYST_NODE_SUMMARY.md  AH_07_WRITER_NODE_SUMMARY.md  AH_08_WRITER_NODE_SUMMARY.md  AH_09_LANGGRAPH_CLI_DESIGN.md  AH_09_LANGGRAPH_CLI_SUMMARY.md  AH_10_TEST_REFACTOR_MOCK_SERVER.md  FRONTEND_GUIDE.md  INITIALIZATION_SUMMARY.md  PRE_FLIGHT_CHECK_REPORT.md  TESTING_GUIDE.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: EvidenceAccordion.jsx  ProcessIndicator.jsx  SmartAnswer.jsx  StandardChat.jsx  TrustEngine.jsx
frontend/src/hooks/: useCheckItAI.js
frontend/src/utils/: cn.js
sandbox/: poc_clarify.py
scripts/: get_truthfulqa_dataset.py  run_api.sh  run_frontend.sh  run_ui.sh  sync_tasks.py
src/check_it_ai/: __main__.py  cli.py  config.py  consts.py
src/check_it_ai/api/: server.py
src/check_it_ai/app/: streamlit_app.py
src/check_it_ai/debug/: router.py
src/check_it_ai/graph/: graph.py  retry.py  runner.py  state.py
src/check_it_ai/graph/nodes/: fact_analyst.py  fact_analyst_check_contradictions.py  researcher.py  router.py  router_patterns.py  writer.py
src/check_it_ai/llm/: __init__.py  prompts.py  providers.py  validation.py
src/check_it_ai/tools/: _http_utils.py  duckduckgo_search.py  fact_check_api.py  google_search.py
src/check_it_ai/types/: __init__.py  analyst.py  api.py  clarify.py  evidence.py  graph.py  output.py  router.py  schemas.py  search.py  writer.py
src/check_it_ai/utils/: cache.py  logging.py
src/check_it_ai/web/: streamlit_app.py
tests/: conftest.py  test_google_tool.py  test_schemas_validation.py  test_smoke.py
tests/e2e/: test_full_pipeline.py  test_router_researcher.py
tests/graph/: test_analyst_writer_integration.py  test_fact_analyst_node.py  test_researcher.py  test_router_clarify_contract.py  test_router_node.py  test_router_researcher_integration.py  test_writer_node.py
tests/integration/: README.md  __init__.py  test_api_server.py  test_fact_analyst.py  test_real_search_apis.py
tests/llm/: test_prompts.py  test_providers.py  test_validation.py
tests/mocks/: __init__.py  mock_service.py
tests/unit/: conftest.py  test_duckduckgo_search.py  test_fact_analyst.py  test_fact_check_api.py  test_google_tool.py  test_schemas_validation.py  test_smoke.py
