[project]
name = "check-it-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "httpx>=0.28.1",
    "langchain>=1.1.2",
    "langgraph>=1.0.4",
    "peft>=0.18.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]