[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "check-it-ai"
version = "0.1.0"
description = "An evidence-grounded historical fact verification system using LangGraph and fine-tuned LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "ddgs>=1.3.1",
    "httpx>=0.28.1",
    "langchain>=1.1.2",
    "langchain-anthropic>=1.3.0",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "peft>=0.18.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]

[project.optional-dependencies]
# LLM Provider packages for Writer Node
# Install with: uv pip install -e ".[llm]" or uv pip install -e ".[llm-openai]"
llm = [
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
]
llm-openai = ["langchain-openai>=0.2.0"]
llm-anthropic = ["langchain-anthropic>=0.2.0"]
llm-google = ["langchain-google-genai>=2.0.0"]

[project.scripts]
check-it-ai = "check_it_ai.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: marks tests as integration tests (real API calls, not mocked)",
    "unit: marks tests as unit tests (fast, mocked, no external I/O)",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/check_it_ai"]
